--- a/osem.html
+++ b/osem.html
@@ -3,8 +3,9 @@
         category: 'network',
         color:"rgb(17, 162, 219)",
         defaults: {
+            name: {value:""},
             path: {value:"/clients"},
-            state: {value:"GET"},
+            method: {value:"GET"},
             payload: {value:""}
         },
         inputs:1,
@@ -33,6 +34,10 @@
         <option value="PUT">PUT</option>
         <option value="PATCH">PATCH</option>
         </select>
+    </div>
+    <div class="form-row">
+        <label for="node-input-name" style="width:40%;"><i class="fa fa-tag"></i> Name:</label>
+        <input type="text" id="node-input-name" placeholder="Name..." style="width:55%;">
     </div>
 </script>
 
