--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
         color:"rgb(17, 162, 219)",
         defaults: {
             name: {value:""},
-            event: {value:"inventory"}
+            eventtype: {value:"inventory"}
         },
         inputs:0,
         outputs:1,
@@ -14,15 +14,19 @@
         },
         labelStyle: function() {
             return this.name?"node_label_italic":"";
+        },
+        oneditprepare: function() {
+            const node = this;
+            $("#node-input-eventtype").val(node.eventtype || "inventory");
         }
     });
 </script>
 
 <script type="text/html" data-template-name="osem-evt">
     <div class="form-row">
-        <label for="node-input-event" style="width:40%;"><i class="fa fa-tasks"></i> Method:</label>
-        <select type="text" id="node-input-event" style="width:55%;">
-            <option value="inventory">Inventory</option>
+        <label for="node-input-eventtype" style="width:40%;"><i class="fa fa-tasks"></i> Event type:</label>
+        <select type="text" id="node-input-eventtype" style="width:55%;">
+            <option value="inventory">inventory</option>
         </select>
     </div>
     <div class="form-row">
